Start rework on tests